fix: update vehicle card layout and styling for improved readability

--- a/app/Vehicle/static/css/vehicle.css
+++ b/app/Vehicle/static/css/vehicle.css
@@ -511,7 +511,7 @@ input:checked + .slider:before {
 
 .location-text {
     font-family: Arial, sans-serif;
-    color: #999;
+    color: #777;
     font-size: 12px;
   }
 
@@ -523,5 +523,14 @@ input:checked + .slider:before {
 .last-updated-sub{
   font-family: Arial, sans-serif;
   font-size: 12px;
-  margin-left: 15px;
+  margin-left: 18px;
+}
+
+.View-in-detail{
+  font-family: Arial, sans-serif;
+  font-size: 12px;
+  color: #336699;
+  text-decoration: none;
+  text-align: center;
+  align-items: center;
 }
